# pap

./: README.md  TODO.md
pap dumps/: dump-libra_hub-202406211704.sql  dump-libra_hub-202406221147.sql  dump-libra_hub-202407051639.sql  dump-libra_hub-202407092000.sql  final-dump-libra_hub-202407100018.sql
pap-app/: bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js
pap-app/src/: app.html
pap-app/src-tauri/: Cargo.toml  tauri.conf.json
pap-app/src-tauri/icons/: icon.icns
pap-app/src-tauri/src/: authors.rs  books.rs  categories.rs  db_structs.rs  jwt.rs  librarians.rs  main.rs  permissions.rs  publishers.rs  readers.rs  requests.rs  roles.rs  sub_categories.rs  tables.rs
pap-app/src/lib/: call.ts  stores.ts  types.ts  utils.ts
pap-app/src/lib/components/custom/: BookReturnDialog.svelte  BooksDisplay.svelte  NewAuthorDialog.svelte  NewBookDialog.svelte  NewCategoryDialog.svelte  NewLibrarianDialog.svelte  NewPublisherDialog.svelte  NewReaderDialog.svelte  NewRoleDialog.svelte  NewSubCategoryDialog.svelte  RequestBookDialog.svelte  SearchBar.svelte
pap-app/src/routes/: +layout.svelte  +page.svelte
pap-app/src/routes/(app)/: +layout.svelte
pap-app/src/routes/(app)/authors/: +page.svelte
pap-app/src/routes/(login)/: +layout.svelte  +page.svelte
pap-app/src/routes/books/: +page.svelte
pap-app/src/routes/login/: +page.svelte
pap-app/src/routes/settings/: +page.svelte
pap-app/src/routes/setup/: +page.svelte
pap-bertrand-books/: .gitignore  arrays.js  files.js  index.js
pap-openlibrary-books/: .gitignore  package.json
(+25 files in other folders)
