[package]
name = "pap-app"
version = "0.0.0"
description = "A library management app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "25.0.1"
bcrypt = "0.15"
jwt = "0.16"
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"
lazy_static = "1.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
